--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,75 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+:root {
+    /* app colors here */
+}
+
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+header {
+    background-color: blue;
+    color: white;
+}
+
+.description {
+    padding: 40px;
+}
+
+#description-header {
+    margin-bottom: 20px;
+    font-size: 60px;
+}
+
+#description-explanation {
+    font-size: 25px;
+}
+
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+}
+
 h1 {
-    background-color: pink;
+    padding: 20px;
+    color: white;
+    font-size: 30px;
+}
+
+#contact {
+    color: white;
+    text-decoration: none;
+    padding-right: 20px;
+    font-size: 20px;
+}
+
+#contact:hover {
+    color: lightskyblue;
+}
+
+.flex-container {
+    display: flex;
+}
+
+#glasses-books {
+    height: 60%;
+    border-radius: 10px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+    padding: 20px;
 }
