--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ form {
     height: 40px;
     font-weight: bold;
     flex-wrap: wrap;
-    width: 325px;
+    width: 375px;
 }
 
 .deleteTask {
@@ -112,4 +112,38 @@ form {
 .watchList {
     display: flex;
     margin: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
+.list-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+
+h3 {
+    text-decoration: underline;
+}
+
+.userInput {
+    width: 300px;
+    height: 40px;
+}
+
+.addListBtn {
+    width: 100px;
+    height: 35px;
+    background-color: beige;
+    font-weight: bold;
+}
+
+.clear-task {
+    width: 250px;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    background-color:beige;
+    margin-top: 10px;
 }
