--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,115 +1,115 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    /* app colors here */
+  /* app colors here */
 }
 
-
 body {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
-    background-color: pink;
+  background-color: pink;
 }
 
 .description {
-    padding: 40px;
+  padding: 40px;
 }
 
 #description-header {
-    margin-bottom: 20px;
-    font-size: 60px;
+  margin-bottom: 20px;
+  font-size: 60px;
 }
 
 #description-explanation {
-    font-size: 25px;
+  font-size: 25px;
 }
 
-
 nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
 }
 
 #youtube-header {
-    padding: 20px;
-    font-size: 30px;
+  padding: 20px;
+  font-size: 30px;
 }
 
 #contact {
-    text-decoration: none;
-    padding-right: 20px;
-    font-size: 20px;
+  text-decoration: none;
+  padding-right: 20px;
+  font-size: 20px;
 }
 
 #contact:hover {
-    color: lightskyblue;
+  color: lightskyblue;
 }
 
 .flex-container {
-    display: flex;
+  display: flex;
 }
 
 #glasses-books {
-    height: 60%;
-    border-radius: 10px;
+  height: 60%;
+  border-radius: 10px;
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 20px;
-    padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  padding: 20px;
 }
-
 
 /* styling the watch list */
 .moviesList {
-    background-color: pink;
-    display: flex;
-    justify-content: space-between;
-    margin: 10px;
-    align-items: center;
-    padding: 5px;
-    border-radius: 5px;
-    height: 40px;
-    font-weight: bold;
-    flex-wrap: wrap;
-    width: 325px;
+  background-color: pink;
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+  align-items: center;
+  padding: 5px;
+  border-radius: 5px;
+  height: 40px;
+  font-weight: bold;
+  flex-wrap: wrap;
+  width: 325px;
 }
 
 .deleteTask {
-    cursor: pointer;
-    width: 25px;
-    height: 25px;
-    /* makes a circle */
-    border-radius: 50%;
-    background-color: black;
-    color: white;
-    margin: 0;
-    padding: 0;
-    outline: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 9px;
+  cursor: pointer;
+  width: 25px;
+  height: 25px;
+  /* makes a circle */
+  border-radius: 50%;
+  background-color: black;
+  color: white;
+  margin: 0;
+  padding: 0;
+  outline: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 9px;
 }
 
-
 .pText {
-    text-transform: capitalize;
+  text-transform: capitalize;
 }
 
 .watchList {
-    display: flex;
-    margin: 5px;
+  display: flex;
+  margin: 5px;
+}
+
+#random-movie {
+  /* make it centered and smaller */
 }
