--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,10 @@ form {
   margin: 5px;
 }
 
-#random-movie {
+#movie-poster {
   /* make it centered and smaller */
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
