--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 * {
-    margin: 0;
-    padding: 0;
+    /* margin: 0;
+    padding: 0; */
     box-sizing: border-box;
 }
 
@@ -210,11 +210,14 @@ form {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 25px;
     width: 50%;
 }
 
 #movie-description {
-    margin: 25px;
+    border: 2px solid lightgray;
+    border-radius: 2px;
+    font-family: EB Garamond, serif;
 }
 
 
