--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: black;
 }
 
 :root {
@@ -12,7 +13,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-nav {background-color: beige}
+nav {background-color: black}
 
 header h1{
     background-color: pink;
@@ -20,11 +21,14 @@ header h1{
     text-align: center;
     flex-wrap: wrap;
     border-radius: 10px;
-    color: gray;
+    padding: 10px;
+    color: black;
+    font-weight: bolder;
 }
 
 header {
     background-color: pink;
+    height: 650px;
 }
 
 .description {
@@ -34,10 +38,12 @@ header {
 #description-header {
     margin-bottom: 20px;
     font-size: 60px;
+    color: black;
 }
 
 #description-explanation {
     font-size: 25px;
+    color: black;
 }
 
 nav {
@@ -68,7 +74,7 @@ h2 {
 }
 
 #glasses-books {
-    height: 500px;
+    height: 498px;
     width: 650px;
     /* border-radius: 10px; */
 /* flex-wrap: wrap; */
@@ -87,7 +93,7 @@ form {
 
 /* styling the watch list */
 .moviesList {
-    background-color: pink;
+    background-color: rgb(222, 219, 219);
     display: flex;
     justify-content: space-between;
     margin: 10px;
@@ -148,9 +154,10 @@ form {
 .addListBtn {
     width: 20%;
     height: auto;
-    background-color: beige;
+    background-color: black;
     font-weight: bold;
     text-align: center;
+    color: pink;
 }
 
 .inputVal {
@@ -163,9 +170,10 @@ form {
     border-radius: 5px;
     font-weight: bold;
     cursor: pointer;
-    background-color:beige;
+    background-color:black;
     margin-top: 10px;
     padding-right: 2px;
+    color: pink;
 }
 
 .random-movie-generator {
@@ -191,10 +199,11 @@ form {
     font-size: bold;
     padding: 10px;
     border-radius: 10px;
-    background-color: beige;
-    color: gray;
+    background-color: black;
+    color: black;
     box-shadow: 0 0 5px 1px black;
     size: 10px;
+    color: pink;
 }
 
 .hide {
@@ -213,11 +222,11 @@ form {
 #display-suggestion {
     margin-top: 20px;
     font-size: 30px;
-    background-color: beige;
+    background-color: black;
     padding: 10px;
     box-shadow: 0 0 10px 2px black;
     border-radius: 10px;
-    color: gray;
+    color: pink;
 }
 
 .home {
@@ -232,9 +241,10 @@ form {
     font-size: bold;
     padding: 10px;
     border-radius: 10px;
-    background-color:beige;
-    margin: 30px;
-    align-items: inherit;
+    background-color:black;
+    /* margin: 30px; */
+    /* align-items: inherit; */
+    color: pink;
 }
 
 #movie-poster {
@@ -246,6 +256,7 @@ form {
 
 #movie-description {
     margin: 25px;
+    font-size: 30px;
 }
 
 
